--- a/voting/postgres/postgres-deploy.yaml
+++ b/voting/postgres/postgres-deploy.yaml
@@ -1,33 +1,33 @@
----
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres-deploy
   labels:
-    name: postgres-deploy
-    app: demo-voting-app
+    app: db
+  name: db
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      name: postgres-pod
-      app: demo-voting-app
+      app: db
   template:
     metadata:
-      name: postgres-pod
       labels:
-        name: postgres-pod
-        app: demo-voting-app
+        app: db
     spec:
       containers:
-      - name: postgres
-        image: postgres:15-alpine
+      - image: postgres:15-alpine
+        name: postgres
+        env:
+        - name: POSTGRES_USER
+          value: postgres
+        - name: POSTGRES_PASSWORD
+          value: postgres
         ports:
         - containerPort: 5432
-        env:
-          - name: POSTGRES_USER
-            value: "postgres"
-          - name: POSTGRES_PASSWORD
-            value: "postgres"
-          - name: POSTGRES_HOST_AUTH_METHOD
-            value: trust
+          name: postgres
+        volumeMounts:
+        - mountPath: /var/lib/postgresql/data
+          name: db-data
+      volumes:
+      - name: db-data
+        emptyDir: {} 
