--- a/voting/redis/redis-deploy.yaml
+++ b/voting/redis/redis-deploy.yaml
@@ -1,26 +1,28 @@
----
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: redis-deploy
   labels:
-    name: redis-deploy
-    app: demo-voting-app
+    app: redis
+  name: redis
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: redis-pod
-      app: demo-voting-app
+      app: redis
   template:
     metadata:
-      name: redis-pod
       labels:
-        name: redis-pod
-        app: demo-voting-app
+        app: redis
     spec:
       containers:
-      - name: redis
-        image: redis
+      - image: redis:alpine
+        name: redis
         ports:
         - containerPort: 6379
+          name: redis
+        volumeMounts:
+        - mountPath: /data
+          name: redis-data
+      volumes:
+      - name: redis-data
+        emptyDir: {} 
