--- a/voting/redis/redis-service.yaml
+++ b/voting/redis/redis-service.yaml
@@ -1,15 +1,15 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis
   labels:
-    name: redis-service
-    app: demo-voting-app
+    app: redis
+  name: redis
 spec:
+  type: ClusterIP
   ports:
-  - port: 6379
+  - name: "redis-service"
+    port: 6379
     targetPort: 6379
   selector:
-    name: redis-pod
-    app: demo-voting-app
+    app: redis
+  
